# caret

./: .env.example  .gitattributes  .gitignore  .impeccable.md  .prettierignore  AGENTS.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  opencode.json  skills-lock.json
app/backend/ai-service/: .dockerignore  Dockerfile  Makefile  alembic.ini  pyproject.toml
app/backend/ai-service/app/: main.py
app/backend/ai-service/app/agents/: __init__.py  general_agent.py
app/backend/ai-service/app/core/: auth.py  config.py  dependencies.py  models_catalog.py
app/backend/ai-service/app/db/: session.py
app/backend/ai-service/app/models/: __init__.py  ai.py
app/backend/ai-service/app/repositories/: __init__.py  ai_repository.py
app/backend/ai-service/app/routers/: __init__.py  ai_router.py  embedding_router.py
app/backend/ai-service/app/schemas/: __init__.py  ai.py
app/backend/ai-service/app/services/: __init__.py  ai_agent_service.py  embedding_service.py
app/backend/ai-service/src/: main.py
app/backend/ai-service/src/agents/: __init__.py  analyst_agent.py  general_agent.py  metrics_tools.py  prompt_utils.py  registry.py  research_agent.py  summary_agent.py  translation_agent.py  types.py
app/backend/ai-service/src/app/: main.py
app/backend/ai-service/src/core/: __init__.py  auth.py  config.py  dependencies.py  models_catalog.py
app/backend/ai-service/src/db/: __init__.py  session.py
app/backend/ai-service/src/models/: __init__.py  ai.py
app/backend/ai-service/src/repositories/: __init__.py  (+1 more)
app/backend/ai-service/tests/: conftest.py
(+425 files in other folders)
